# glil_unofficial

./: .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  README.md  comparison_report.md  fair_comparison_report.md  mkdocs.yml  package.xml
.github/ISSUE_TEMPLATE/: reproduction_report.md
.github/workflows/: build.yml  gendoc.yml
cmake/: glil-config.cmake.in
config/: config.json  config_glil.json  config_global_mapping_cpu.json  config_global_mapping_glil.json  config_gnss.json  config_odometry_cpu.json  config_odometry_glil.json  config_perception.json  config_ros.json  config_sensors.json  config_sub_mapping_cpu.json  config_sub_mapping_glil.json  config_viewer.json  sample_coreset_benchmark.csv  sample_gnss_observations.csv  sample_perception_factor_report.csv  sample_perception_observations.csv
config/sample_perception_run_compare/baseline/: evo_ape.txt
config/sample_perception_run_compare/perception/: evo_ape.txt  perception_report.csv
config/sample_reproduction_bundle/: command.txt  coreset_benchmark.csv  evo_ape.txt
config_fair_glil_true_sample_t128_hard_csp15_ct64_lag4/: config_odometry_cpu.json
config_fair_glil_true_sample_t128_hard_csp15_ct64_lag4_ffb100/: config_odometry_cpu.json  config_sub_mapping_cpu.json
config_fair_glil_true_sample_t128_hard_csp15_ct64_lag4_ffb100_skip16/: config_odometry_cpu.json  config_preprocess.json  config_ros.json
config_fair_glil_true_sample_t128_hard_csp15_ct64_lag4_ffb500/: config.json  config_odometry_cpu.json
config_fair_glil_true_sample_t128_indoor_d4k_k1_rw_csp15_ct64_lag4/: config.json  config_odometry_cpu.json  config_preprocess.json  config_ros.json  config_sensors.json
config_fair_glil_true_sample_t128_k1_ct64/: config_global_mapping_cpu.json  config_odometry_cpu.json  config_sensors.json
config_official_os1_128_01_downsampled_acc1/: config.json  config_odometry_cpu.json  config_ros.json  config_sensors.json
docker/ubuntu/: Dockerfile.gcc  Dockerfile.gcc.cuda  Dockerfile.llvm  Dockerfile.llvm.cuda
docs/: exact_sampling.md  gnss_factors.md  index.md  parameters.md  perception_factors.md  reproduction.md
docs/overrides/: main.html
include/glil/common/: cloud_covariance_estimation.hpp  cloud_deskewing.hpp  imu_integration.hpp
include/glil/factors/: integrated_coreset_factor.hpp  integrated_vgicp_coreset_factor.hpp  perception_landmark_factor.hpp
include/glil/gnss/: gnss_observation.hpp  gnss_observation_io.hpp
include/glil/mapping/: async_global_mapping.hpp  async_sub_mapping.hpp  callbacks.hpp  global_mapping.hpp  global_mapping_base.hpp  global_mapping_pose_graph.hpp  sub_map.hpp  sub_mapping.hpp  sub_mapping_base.hpp  sub_mapping_passthrough.hpp
include/glil/odometry/: async_odometry_estimation.hpp  callbacks.hpp  estimation_frame.hpp  initial_state_estimation.hpp  loose_initial_state_estimation.hpp  odometry_estimation_base.hpp  odometry_estimation_cpu.hpp  odometry_estimation_ct.hpp  odometry_estimation_glil.hpp  odometry_estimation_gpu.hpp  odometry_estimation_imu.hpp
include/glil/perception/: cloud_landmark_extractor.hpp  perception_factor_builder.hpp  perception_observation.hpp  perception_observation_io.hpp
include/glil/preprocess/: cloud_preprocessor.hpp  preprocessed_frame.hpp
include/glil/util/: concurrent_vector.hpp  config.hpp  config_impl.hpp  convert_to_string.hpp  data_validator.hpp  debug.hpp  digest.hpp  extension_module.hpp  extension_module_ros.hpp  extension_module_ros2.hpp  interpolation_helper.hpp  load_module.hpp  logging.hpp  perftime.hpp  raw_points.hpp  ros_cloud_converter.hpp  serialization.hpp  time_keeper.hpp  trajectory_manager.hpp
include/glil/viewer/: interactive_viewer.hpp  offline_viewer.hpp  standard_viewer.hpp
include/glil/viewer/interactive/: bundle_adjustment_modal.hpp  manual_loop_close_modal.hpp
src/glil/common/: cloud_covariance_estimation.cpp  cloud_deskewing.cpp  imu_integration.cpp
src/glil/factors/: integrated_coreset_factor.cpp  integrated_vgicp_coreset_factor.cpp  perception_landmark_factor.cpp
src/glil/gnss/: gnss_observation_io.cpp  gnss_prior_injector.cpp
src/glil/mapping/: async_global_mapping.cpp  async_sub_mapping.cpp  callbacks.cpp  global_mapping.cpp  global_mapping_base.cpp  global_mapping_create.cpp  global_mapping_pose_graph.cpp  global_mapping_pose_graph_create.cpp  sub_map.cpp  sub_mapping.cpp  sub_mapping_base.cpp  sub_mapping_create.cpp  sub_mapping_passthrough.cpp  sub_mapping_passthrough_create.cpp
src/glil/odometry/: async_odometry_estimation.cpp  callbacks.cpp  estimation_frame.cpp  initial_state_estimation.cpp  loose_initial_state_estimation.cpp  odometry_estimation_base.cpp  odometry_estimation_cpu.cpp  odometry_estimation_cpu_create.cpp  odometry_estimation_ct.cpp  odometry_estimation_ct_create.cpp  odometry_estimation_glil.cpp  odometry_estimation_glil_create.cpp  odometry_estimation_gpu.cpp  odometry_estimation_gpu_create.cpp  odometry_estimation_imu.cpp
src/glil/perception/: cloud_landmark_extractor.cpp  perception_csv_injector.cpp  perception_factor_builder.cpp  perception_observation_io.cpp
src/glil/preprocess/: cloud_preprocessor.cpp
src/glil/util/: config.cpp  data_validator.cpp  export_factors.cpp  extension_module.cpp  load_module.cpp  logging.cpp  serialization.cpp  time_keeper.cpp
src/glil/viewer/: interactive_viewer.cpp  memory_monitor.cpp  offline_viewer.cpp  standard_viewer.cpp
src/glil/viewer/interactive/: bundle_adjustment_modal.cpp  manual_loop_close_modal.cpp
tests/: test_gnss_observation.cpp  test_integrated_vgicp_coreset_factor.cpp  test_perception_landmark_factor.cpp
tools/: benchmark_coreset_factor.cpp  extract_cloud_landmarks.cpp  generate_perception_config.cpp  glil_coreset_benchmark_summary  glil_perception_run_compare  glil_perception_workflow  glil_reproduction_bundle  perception_config_tool.hpp  report_perception_factors.cpp  summarize_perception_reports.cpp
